--- a/PrestaFi-App/package.json
+++ b/PrestaFi-App/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "stellar-sdk": "^12.0.0-rc.3",
