--- a/PrestaFi-App/package.json
+++ b/PrestaFi-App/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@creit.tech/stellar-wallets-kit": "^0.8.2",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@stellar/freighter-api": "^2.0.0",
     "class-variance-authority": "^0.7.0",
