--- a/PrestaFi-App/package.json
+++ b/PrestaFi-App/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "@creit.tech/stellar-wallets-kit": "^0.8.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@stellar/freighter-api": "^2.0.0",
     "class-variance-authority": "^0.7.0",
@@ -23,7 +28,8 @@
     "react-dom": "^18",
     "stellar-sdk": "^12.0.0-rc.3",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@types/node": "^20",
