--- a/PrestaFi-App/package.json
+++ b/PrestaFi-App/package.json
@@ -31,7 +31,8 @@
     "stellar-sdk": "^12.0.0-rc.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.1",
+    "increment": "../SmartContracts/soroban-prestafi/packages/increment"
   },
   "devDependencies": {
     "@types/node": "^20",
