--- a/PrestaFi-App/package.json
+++ b/PrestaFi-App/package.json
@@ -23,16 +23,16 @@
     "@stellar/freighter-api": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "increment": "../SmartContracts/soroban-prestafi/packages/increment",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "stellar-sdk": "^12.0.0-rc.3",
+    "stellar-sdk": "^12.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.1",
-    "increment": "../SmartContracts/soroban-prestafi/packages/increment"
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -43,5 +43,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
