--- a/PrestaFi-App/.env
+++ b/PrestaFi-App/.env
@@ -2,5 +2,5 @@
 NEXT_PUBLIC__SOROBAN_NETWORK_PASSPHRASE="Test SDF Network ; September 2015"
 NEXT_PUBLIC__SOROBAN_RPC_URL="https://soroban-testnet.stellar.org:443"
 
-SOROBAN_ACCOUNT="presatfi"
+SOROBAN_ACCOUNT="prestafi"
 SOROBAN_NETWORK="testnet"
