--- a/PrestaFi-App/package.json
+++ b/PrestaFi-App/package.json
@@ -28,7 +28,9 @@
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
+    "react-use": "^17.5.0",
     "stellar-sdk": "^12.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
